k8s/ingress/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo
  name: demo
  namespace: ingress-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo
  sessionAffinity: None
  type: ClusterIP
